refactor(tile-proxy): remove `MapStyleUrlValidator` and update usage